gccida/g2/reg_to_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_to_stack/src/reg-stack.c:888:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode k; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_to_stack/src/reg-stack.c:891:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode m; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_to_stack/src/reg-stack.c:1053:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v35 = ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)v32 + 2)] - 5) < 2) + rtint + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_to_stack/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_to_stack/src/reg-stack.c:1054:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v36 = ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)v32 + 2)] - 5) < 2) + rtint; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_to_stack/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_to_stack/src/obj/reg-stack.o] Error 1
